AG-2812 letter-spacing fix in 2fa

--- a/src/popup/styles/form.pcss
+++ b/src/popup/styles/form.pcss
@@ -88,7 +88,7 @@
             height: 50px;
             padding: 10px 25px;
             font-size: 3.2rem;
-            letter-spacing: 5px;
+            letter-spacing: 1px;
         }
 
         &--password {
